tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/serverfirst/auto-tcp-server:ISTIO_MUTUAL/PERMISSIVE/_test_context/PeerAuthentication-DestinationRule.2473335065.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-98059
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-98059
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: c
